--- a/docs/_layouts/page/article/person.html
+++ b/docs/_layouts/page/article/person.html
@@ -6,7 +6,7 @@ type: article
 
 <section>
     <div class="container content-space-3">
-        <img src="{{ page.image }}" class="float-md-start pe-3 pb-3">
+        <img src="{{ page.image }}" class="float-md-start pe-4 pb-3 w-50">
 
         <leu-formatter class="">
             {{ content }}
