--- a/docs/_includes/sec/contact-form-section.html
+++ b/docs/_includes/sec/contact-form-section.html
@@ -78,7 +78,7 @@
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="termin" value="Später" id="f1_termin_b">
+                                <input class="form-check-input" type="radio" name="termin" value="Später als diese Woche" id="f1_termin_b">
                                 <label class="form-check-label" for="f1_termin_b">
                                     {% include do/trans.html val="Später" %}
                                 </label>
